a_simple_C_interpreter/myInterpParser.java
// $ANTLR 3.5.2 myInterp.g 2022-05-08 16:14:48

    // import packages here.
    import java.util.HashMap;
    import java.util.Scanner;
    import java.lang.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myInterpParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ELSE", "IF", "INCLUDE", 
		"INT", "Identifier", "Integer_constant", "MAIN", "NEWLINE", "PRINTF", 
		"RETURN_", "SCANF", "STRING", "VOID", "WS", "'!='", "'%'", "'%='", "'&'", 
		"'('", "')'", "'*'", "'*='", "'+'", "'+='", "','", "'-'", "'-='", "'/'", 
		"'/='", "';'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", 
		"'>>'", "'>>='", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int COMMENT=4;
	public static final int ELSE=5;
	public static final int IF=6;
	public static final int INCLUDE=7;
	public static final int INT=8;
	public static final int Identifier=9;
	public static final int Integer_constant=10;
	public static final int MAIN=11;
	public static final int NEWLINE=12;
	public static final int PRINTF=13;
	public static final int RETURN_=14;
	public static final int SCANF=15;
	public static final int STRING=16;
	public static final int VOID=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myInterpParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myInterpParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myInterpParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myInterp.g"; }


	    HashMap memory = new HashMap();
	    boolean TRACEON = false;
	    Scanner scanner = new Scanner(System.in);
	    String str;
	    boolean SKIP;



	// $ANTLR start "prog"
	// myInterp.g:22:1: prog : ( INCLUDE )* ( void_main | int_main ) ;
	public final void prog() throws RecognitionException {
		try {
			// myInterp.g:22:5: ( ( INCLUDE )* ( void_main | int_main ) )
			// myInterp.g:22:6: ( INCLUDE )* ( void_main | int_main )
			{
			// myInterp.g:22:6: ( INCLUDE )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==INCLUDE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myInterp.g:22:7: INCLUDE
					{
					match(input,INCLUDE,FOLLOW_INCLUDE_in_prog36); if (state.failed) return;
					}
					break;

				default :
					break loop1;
				}
			}

			// myInterp.g:22:17: ( void_main | int_main )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==VOID) ) {
				alt2=1;
			}
			else if ( (LA2_0==INT) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// myInterp.g:22:18: void_main
					{
					pushFollow(FOLLOW_void_main_in_prog41);
					void_main();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myInterp.g:22:28: int_main
					{
					pushFollow(FOLLOW_int_main_in_prog43);
					int_main();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			if ( state.backtracking==0 ) {if (TRACEON) System.out.println("program:(INCLUDE)* (void_main|int_main)");}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "void_main"
	// myInterp.g:24:1: void_main : VOID MAIN '(' ')' ( NEWLINE )* '{' ( statement )* '}' ;
	public final void void_main() throws RecognitionException {
		try {
			// myInterp.g:24:10: ( VOID MAIN '(' ')' ( NEWLINE )* '{' ( statement )* '}' )
			// myInterp.g:24:11: VOID MAIN '(' ')' ( NEWLINE )* '{' ( statement )* '}'
			{
			match(input,VOID,FOLLOW_VOID_in_void_main53); if (state.failed) return;
			match(input,MAIN,FOLLOW_MAIN_in_void_main55); if (state.failed) return;
			match(input,23,FOLLOW_23_in_void_main57); if (state.failed) return;
			match(input,24,FOLLOW_24_in_void_main59); if (state.failed) return;
			// myInterp.g:24:29: ( NEWLINE )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==NEWLINE) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// myInterp.g:24:30: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_void_main62); if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			match(input,45,FOLLOW_45_in_void_main66); if (state.failed) return;
			// myInterp.g:24:45: ( statement )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==IF||(LA4_0 >= INT && LA4_0 <= Identifier)||(LA4_0 >= NEWLINE && LA4_0 <= PRINTF)||LA4_0==SCANF||LA4_0==VOID) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// myInterp.g:24:45: statement
					{
					pushFollow(FOLLOW_statement_in_void_main69);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			match(input,46,FOLLOW_46_in_void_main72); if (state.failed) return;
			if ( state.backtracking==0 ) {if (TRACEON) System.out.println("VOID MAIN () { statement*}");}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "void_main"



	// $ANTLR start "int_main"
	// myInterp.g:27:1: int_main : INT MAIN '(' ')' ( NEWLINE )* '{' ( statement )* ( return_ )? '}' ;
	public final void int_main() throws RecognitionException {
		try {
			// myInterp.g:27:9: ( INT MAIN '(' ')' ( NEWLINE )* '{' ( statement )* ( return_ )? '}' )
			// myInterp.g:27:10: INT MAIN '(' ')' ( NEWLINE )* '{' ( statement )* ( return_ )? '}'
			{
			match(input,INT,FOLLOW_INT_in_int_main96); if (state.failed) return;
			match(input,MAIN,FOLLOW_MAIN_in_int_main98); if (state.failed) return;
			match(input,23,FOLLOW_23_in_int_main100); if (state.failed) return;
			match(input,24,FOLLOW_24_in_int_main102); if (state.failed) return;
			// myInterp.g:27:27: ( NEWLINE )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==NEWLINE) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// myInterp.g:27:28: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_int_main105); if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,45,FOLLOW_45_in_int_main110); if (state.failed) return;
			// myInterp.g:27:44: ( statement )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==IF||(LA6_0 >= INT && LA6_0 <= Identifier)||(LA6_0 >= NEWLINE && LA6_0 <= PRINTF)||LA6_0==SCANF||LA6_0==VOID) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// myInterp.g:27:44: statement
					{
					pushFollow(FOLLOW_statement_in_int_main113);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop6;
				}
			}

			// myInterp.g:27:55: ( return_ )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==RETURN_) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// myInterp.g:27:55: return_
					{
					pushFollow(FOLLOW_return__in_int_main116);
					return_();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			match(input,46,FOLLOW_46_in_int_main119); if (state.failed) return;
			if ( state.backtracking==0 ) {if (TRACEON) System.out.println("INT MAIN () { statement* return_?}");}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "int_main"



	// $ANTLR start "type"
	// myInterp.g:31:1: type : ( INT | VOID );
	public final void type() throws RecognitionException {
		try {
			// myInterp.g:31:5: ( INT | VOID )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==INT) ) {
				alt8=1;
			}
			else if ( (LA8_0==VOID) ) {
				alt8=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// myInterp.g:31:6: INT
					{
					match(input,INT,FOLLOW_INT_in_type144); if (state.failed) return;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: INT"); }
					}
					break;
				case 2 :
					// myInterp.g:32:6: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_type153); if (state.failed) return;
					if ( state.backtracking==0 ) {if (TRACEON) System.out.println("type: VOID"); }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"


	public static class expr_return extends ParserRuleReturnScope {
		public int value;
	};


	// $ANTLR start "expr"
	// myInterp.g:36:1: expr returns [int value] : e= multExpr ( '+' e= multExpr | '-' e= multExpr )* ;
	public final myInterpParser.expr_return expr() throws RecognitionException {
		myInterpParser.expr_return retval = new myInterpParser.expr_return();
		retval.start = input.LT(1);

		int e =0;

		try {
			// myInterp.g:37:5: (e= multExpr ( '+' e= multExpr | '-' e= multExpr )* )
			// myInterp.g:37:9: e= multExpr ( '+' e= multExpr | '-' e= multExpr )*
			{
			pushFollow(FOLLOW_multExpr_in_expr188);
			e=multExpr();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) {retval.value = e;}
			// myInterp.g:38:9: ( '+' e= multExpr | '-' e= multExpr )*
			loop9:
			while (true) {
				int alt9=3;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==27) ) {
					alt9=1;
				}
				else if ( (LA9_0==30) ) {
					alt9=2;
				}

				switch (alt9) {
				case 1 :
					// myInterp.g:38:13: '+' e= multExpr
					{
					match(input,27,FOLLOW_27_in_expr204); if (state.failed) return retval;
					pushFollow(FOLLOW_multExpr_in_expr208);
					e=multExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value += e;}
					}
					break;
				case 2 :
					// myInterp.g:39:13: '-' e= multExpr
					{
					match(input,30,FOLLOW_30_in_expr224); if (state.failed) return retval;
					pushFollow(FOLLOW_multExpr_in_expr228);
					e=multExpr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.value -= e;}
					}
					break;

				default :
					break loop9;
				}
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"



	// $ANTLR start "multExpr"
	// myInterp.g:43:1: multExpr returns [int value] : e= atom ( '*' e= atom | '/' e= atom | '%' e= atom | '<<' e= atom | '>>' e= atom )* ;
	public final int multExpr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// myInterp.g:44:5: (e= atom ( '*' e= atom | '/' e= atom | '%' e= atom | '<<' e= atom | '>>' e= atom )* )
			// myInterp.g:44:9: e= atom ( '*' e= atom | '/' e= atom | '%' e= atom | '<<' e= atom | '>>' e= atom )*
			{
			pushFollow(FOLLOW_atom_in_multExpr266);
			e=atom();
			state._fsp--;
			if (state.failed) return value;
			if ( state.backtracking==0 ) {value = e;}
			// myInterp.g:45:9: ( '*' e= atom | '/' e= atom | '%' e= atom | '<<' e= atom | '>>' e= atom )*
			loop10:
			while (true) {
				int alt10=6;
				switch ( input.LA(1) ) {
				case 25:
					{
					alt10=1;
					}
					break;
				case 32:
					{
					alt10=2;
					}
					break;
				case 20:
					{
					alt10=3;
					}
					break;
				case 36:
					{
					alt10=4;
					}
					break;
				case 43:
					{
					alt10=5;
					}
					break;
				}
				switch (alt10) {
				case 1 :
					// myInterp.g:45:14: '*' e= atom
					{
					match(input,25,FOLLOW_25_in_multExpr284); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_multExpr288);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value *= e;}
					}
					break;
				case 2 :
					// myInterp.g:46:14: '/' e= atom
					{
					match(input,32,FOLLOW_32_in_multExpr305); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_multExpr309);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value /= e;}
					}
					break;
				case 3 :
					// myInterp.g:47:14: '%' e= atom
					{
					match(input,20,FOLLOW_20_in_multExpr326); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_multExpr330);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value %= e;}
					}
					break;
				case 4 :
					// myInterp.g:48:14: '<<' e= atom
					{
					match(input,36,FOLLOW_36_in_multExpr347); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_multExpr351);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value <<= e;}
					}
					break;
				case 5 :
					// myInterp.g:49:14: '>>' e= atom
					{
					match(input,43,FOLLOW_43_in_multExpr368); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_multExpr372);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value >>= e;}
					}
					break;

				default :
					break loop10;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "multExpr"



	// $ANTLR start "atom"
	// myInterp.g:53:1: atom returns [int value] : ( Integer_constant | Identifier | '(' expr ')' );
	public final int atom() throws RecognitionException {
		int value = 0;


		Token Integer_constant1=null;
		Token Identifier2=null;
		ParserRuleReturnScope expr3 =null;

		try {
			// myInterp.g:54:5: ( Integer_constant | Identifier | '(' expr ')' )
			int alt11=3;
			switch ( input.LA(1) ) {
			case Integer_constant:
				{
				alt11=1;
				}
				break;
			case Identifier:
				{
				alt11=2;
				}
				break;
			case 23:
				{
				alt11=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return value;}
				NoViableAltException nvae =
					new NoViableAltException("", 11, 0, input);
				throw nvae;
			}
			switch (alt11) {
				case 1 :
					// myInterp.g:54:9: Integer_constant
					{
					Integer_constant1=(Token)match(input,Integer_constant,FOLLOW_Integer_constant_in_atom409); if (state.failed) return value;
					if ( state.backtracking==0 ) {value = Integer.parseInt((Integer_constant1!=null?Integer_constant1.getText():null));}
					}
					break;
				case 2 :
					// myInterp.g:55:9: Identifier
					{
					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_atom421); if (state.failed) return value;
					if ( state.backtracking==0 ) {
					        Integer v = (Integer)memory.get((Identifier2!=null?Identifier2.getText():null));
					        if ( v!=null ) value = v.intValue();
					        else System.err.println("undefined variable "+(Identifier2!=null?Identifier2.getText():null));
					        }
					}
					break;
				case 3 :
					// myInterp.g:61:9: '(' expr ')'
					{
					match(input,23,FOLLOW_23_in_atom441); if (state.failed) return value;
					pushFollow(FOLLOW_expr_in_atom443);
					expr3=expr();
					state._fsp--;
					if (state.failed) return value;
					match(input,24,FOLLOW_24_in_atom445); if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (expr3!=null?((myInterpParser.expr_return)expr3).value:0);}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "atom"



	// $ANTLR start "compExpr"
	// myInterp.g:64:1: compExpr returns [int value] : e= atom ( '>' e= atom | '>=' e= atom | '<' e= atom | '<=' e= atom | '==' e= atom | '!=' e= atom ) ;
	public final int compExpr() throws RecognitionException {
		int value = 0;


		int e =0;

		try {
			// myInterp.g:65:5: (e= atom ( '>' e= atom | '>=' e= atom | '<' e= atom | '<=' e= atom | '==' e= atom | '!=' e= atom ) )
			// myInterp.g:65:10: e= atom ( '>' e= atom | '>=' e= atom | '<' e= atom | '<=' e= atom | '==' e= atom | '!=' e= atom )
			{
			pushFollow(FOLLOW_atom_in_compExpr473);
			e=atom();
			state._fsp--;
			if (state.failed) return value;
			if ( state.backtracking==0 ) {value = e;}
			// myInterp.g:66:3: ( '>' e= atom | '>=' e= atom | '<' e= atom | '<=' e= atom | '==' e= atom | '!=' e= atom )
			int alt12=6;
			switch ( input.LA(1) ) {
			case 41:
				{
				alt12=1;
				}
				break;
			case 42:
				{
				alt12=2;
				}
				break;
			case 35:
				{
				alt12=3;
				}
				break;
			case 38:
				{
				alt12=4;
				}
				break;
			case 40:
				{
				alt12=5;
				}
				break;
			case 19:
				{
				alt12=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return value;}
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}
			switch (alt12) {
				case 1 :
					// myInterp.g:66:5: '>' e= atom
					{
					match(input,41,FOLLOW_41_in_compExpr482); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr486);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value > e) ? 1:0;}
					}
					break;
				case 2 :
					// myInterp.g:67:5: '>=' e= atom
					{
					match(input,42,FOLLOW_42_in_compExpr494); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr498);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value >= e) ? 1:0;}
					}
					break;
				case 3 :
					// myInterp.g:68:5: '<' e= atom
					{
					match(input,35,FOLLOW_35_in_compExpr506); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr510);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value < e) ? 1:0;}
					}
					break;
				case 4 :
					// myInterp.g:69:5: '<=' e= atom
					{
					match(input,38,FOLLOW_38_in_compExpr518); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr522);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value <= e) ? 1:0;}
					}
					break;
				case 5 :
					// myInterp.g:70:5: '==' e= atom
					{
					match(input,40,FOLLOW_40_in_compExpr530); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr534);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value == e) ? 1:0;}
					}
					break;
				case 6 :
					// myInterp.g:71:5: '!=' e= atom
					{
					match(input,19,FOLLOW_19_in_compExpr542); if (state.failed) return value;
					pushFollow(FOLLOW_atom_in_compExpr546);
					e=atom();
					state._fsp--;
					if (state.failed) return value;
					if ( state.backtracking==0 ) {value = (value != e) ? 1:0;}
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "compExpr"



	// $ANTLR start "overloaded_op"
	// myInterp.g:76:1: overloaded_op : Identifier ( '+=' e= atom | '-=' e= atom | '*=' e= atom | '/=' e= atom | '%=' e= atom | '>>=' e= atom | '<<=' e= atom ) ;
	public final void overloaded_op() throws RecognitionException {
		Token Identifier4=null;
		int e =0;
